_deployment/comment-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-api
  labels:
    app: comment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-api
  template:
    metadata:
      labels:
        app: comment-api
    spec:
      containers:
      - name: comment-api
        image: comment-api:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081

---

# apiVersion: v1
# kind: Service
# metadata:
#   name: comment-api
#   labels:
#     app: comment-api
# spec:
#   #type: NodePort
#   selector:
#     app: comment-api
#   ports:
#       # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
#     - name: http
#       port: 8081    
#       targetPort: 8081
#       # protocol: TCP
#       # Optional field
#       # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
#       #nodePort: 30007
# status:
#   loadBalancer: {}    

  
apiVersion: v1
kind: Service
metadata:
  name: comment-api-svc
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: comment-api
