_deployment/comment-api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: comment-api
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /
        backend:
          serviceName: comment-api
          servicePort: http
